--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,7 @@
 		"ghcr.io/devcontainers/features/common-utils:2": {},
 		"ghcr.io/devcontainers/features/python:1": {
 			"installTools": true,
-			"version": "latest"
+			"version": "3.9"
 		},
 		"ghcr.io/devcontainers/features/docker-in-docker:2": {
 			"moby": true,
@@ -19,8 +19,11 @@
 		"ghcr.io/devcontainers/features/git:1": {
 			"ppa": true,
 			"version": "latest"
-		}
-	},
+		},
+		"ghcr.io/devcontainers/features/terraform": {},
+		"ghcr.io/dhoeric/features/terraform-docs": {},
+		"ghcr.io/devcontainers-contrib/features/poetry": {}
+		},
 	"customizations": {
 		"vscode": {
 			"extensions": [
@@ -43,7 +46,7 @@
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "chmod u+x ./.devcontainer/scripts/setup.sh"
+	"postCreateCommand": "chmod u+x ./.devcontainer/scripts/setup.sh && ./.devcontainer/scripts/setup.sh"
 	// Configure tool-specific properties.
 	// "customizations": {},
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
