--- a/project/generation/webapp/docker-compose.yml
+++ b/project/generation/webapp/docker-compose.yml
@@ -1,12 +1,27 @@
-version: '3'
+version: "3"
+
+networks:
+  data_eng_101:
+    name: data_eng_101
+    external: true
 
 services:
   database:
     image: mysql:8.0.32-debian
-    container_name: 'database'
+    container_name: "database"
     restart: always
+    command: --default-authentication-plugin=mysql_native_password
     environment:
-      - MYSQL_ROOT_PASSWORD=password
+      MYSQL_DATABASE: webapp
+      MYSQL_USER: data_engineer
+      MYSQL_PASSWORD: password
+      MYSQL_ALLOW_EMPTY_PASSWORD: true
+    ports:
+      - 3306:3306
+    networks:
+      data_eng_101:
+        ipv4_address: 172.20.0.3
+
   webapp:
     container_name: 'webapp'
     build: app
@@ -14,8 +29,11 @@ services:
     volumes:
       - ./app:/usr/src/app
     ports:
-      - 5001:5000
+      - 5000:5000
     env_file:
       - .env
     depends_on:
       - database
+    networks:
+      data_eng_101:
+        ipv4_address: 172.20.0.4
