--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -57,12 +57,6 @@ repos:
     hooks:
       - id: shellcheck
 
-  - repo: https://github.com/PyCQA/bandit
-    rev: "1.7.4"
-    hooks:
-      - id: bandit
-        args: ["-x", "*_test.py"]
-
   - repo: https://github.com/myint/autoflake
     rev: "v1.7.7"
     hooks:
@@ -80,7 +74,7 @@ repos:
     hooks:
       - id: flake8
         args:
-          - --extend-ignore=E501
+          - --extend-ignore=E501,E203
 
   - repo: https://github.com/python-jsonschema/check-jsonschema
     rev: "0.19.2"
